# one-code-to-rule-them-all

./: CMakeLists.txt  Jenkinsfile  Jenkinsfile.groovy  Makefile  README.md  linux.yaml
include/: rule.h
src/: rule.c
test/: test.h  test_rule.c
toolchains/: iOS.toolchain.cmake
